[gd_scene load_steps=37 format=3 uid="uid://chvmn20p3r0jd"]

[ext_resource type="Script" path="res://scripts/bello.gd" id="1_pb4cl"]
[ext_resource type="Texture2D" uid="uid://ccfvv6r4h8j1" path="res://assets/textures/player.png" id="2_d31bh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y53qs"]
size = Vector2(20, 8.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5c2i"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 86, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qndcb"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 69, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_equfc"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 86, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfjay"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 69, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lev6t"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 86, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhgiv"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 69, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nujr"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 86, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_imjh1"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 69, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6hax"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35bbs"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 1, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_84u60"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls1pk"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6pkg"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1voj"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_re23q"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqwkl"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 1, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu24g"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hfee"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahhvs"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 1, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq7pm"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 1, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ib8c"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ihys"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs2kw"]
atlas = ExtResource("2_d31bh")
region = Rect2(1, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r2bt"]
atlas = ExtResource("2_d31bh")
region = Rect2(34, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3erv"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kyhf"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 52, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilaem"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv12j"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 18, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qt76"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa2fy"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 35, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsrvp"]
atlas = ExtResource("2_d31bh")
region = Rect2(67, 1, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjq6c"]
atlas = ExtResource("2_d31bh")
region = Rect2(100, 1, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pua45"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5c2i")
}],
"loop": true,
"name": &"dash_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qndcb")
}],
"loop": true,
"name": &"dash_down_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_equfc")
}],
"loop": true,
"name": &"dash_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfjay")
}],
"loop": true,
"name": &"dash_left_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lev6t")
}],
"loop": true,
"name": &"dash_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhgiv")
}],
"loop": true,
"name": &"dash_right_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nujr")
}],
"loop": true,
"name": &"dash_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imjh1")
}],
"loop": true,
"name": &"dash_up_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6hax")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35bbs")
}],
"loop": true,
"name": &"idle_down_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84u60")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls1pk")
}],
"loop": true,
"name": &"idle_left_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6pkg")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1voj")
}],
"loop": true,
"name": &"idle_right_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_re23q")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqwkl")
}],
"loop": true,
"name": &"idle_up_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu24g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hfee")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahhvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq7pm")
}],
"loop": true,
"name": &"walk_down_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ib8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ihys")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs2kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r2bt")
}],
"loop": true,
"name": &"walk_left_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3erv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kyhf")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilaem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv12j")
}],
"loop": true,
"name": &"walk_right_sword",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qt76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa2fy")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsrvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjq6c")
}],
"loop": true,
"name": &"walk_up_sword",
"speed": 5.0
}]

[node name="Bello" type="CharacterBody2D"]
z_index = 3
scale = Vector2(2, 2)
collision_mask = 22
script = ExtResource("1_pb4cl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.75)
shape = SubResource("RectangleShape2D_y53qs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_pua45")
animation = &"walk_up_sword"
frame = 1
frame_progress = 0.757623

[node name="DashSpeedCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="DashRecoverCooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.8
autostart = true

[node name="MeleeCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ArrowCooldown" type="Timer" parent="."]
autostart = true

[node name="FreezeCooldown" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="HealCooldown" type="Timer" parent="."]
wait_time = 11.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)
position_smoothing_enabled = true

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
z_index = -2
offset_left = -628.0
offset_top = -417.0
offset_right = 631.0
offset_bottom = 415.0
color = Color(0, 0.670588, 1, 1)

[node name="CameraShake" type="Timer" parent="."]

[connection signal="timeout" from="DashSpeedCooldown" to="." method="_on_dash_speed_cooldown_timeout"]
[connection signal="timeout" from="DashRecoverCooldown" to="." method="_on_dash_recover_cooldown_timeout"]
[connection signal="timeout" from="MeleeCooldown" to="." method="_on_melee_cooldown_timeout"]
[connection signal="timeout" from="ArrowCooldown" to="." method="_on_arrow_cooldown_timeout"]
[connection signal="timeout" from="FreezeCooldown" to="." method="_on_freeze_cooldown_timeout"]
[connection signal="timeout" from="HealCooldown" to="." method="_on_heal_cooldown_timeout"]
[connection signal="timeout" from="CameraShake" to="." method="_on_camera_shake_timeout"]
